# Cognix

./: .dockerignore  .env.example  .gitignore  .lintstagedrc.json  .lintstagedrc.mjs  .npmrc  .prettierignore  README.md  commitlint.config.mjs  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mjs  tsconfig.json  turbo.json
agents/: README.md
apps/api/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_platform.py  0002_add_projects.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/: router.py
apps/api/app/api/routes/: health.py
apps/api/app/api/routes/v1/: __init__.py  auth.py  invitations.py  organizations.py  preferences.py  projects.py  tasks.py  users.py  workspaces.py
apps/api/app/core/: __init__.py  config.py  database.py  dependencies.py  exceptions.py  rate_limit.py  redis.py  security.py
apps/api/app/models/: __init__.py  audit_log.py  base.py  invitation.py  membership.py  organization.py  preference.py  project.py  role.py  session.py  task.py  user.py  workspace.py
apps/api/app/schemas/: auth.py  common.py  invitation.py  organization.py  preference.py  project.py  task.py  user.py  workspace.py
apps/api/app/services/: __init__.py  audit_service.py  auth_service.py  invitation_service.py  organization_service.py  preference_service.py  project_service.py  rbac_service.py  task_service.py  workspace_service.py
apps/api/tests/: conftest.py  test_auth.py  test_health.py  test_organizations.py  test_preferences.py  test_workspaces.py
prompts/: 000_MASTER_PROMPT.md  001_PROJECT_SETUP.md  002_DESIGN_SYSTEM.md  003_FRONTEND.md  004_BACKEND.md  005_DATABASE.md  006_AUTH.md  007_DASHBOARD.md  008_AGENT_SYSTEM.md  009_MEMORY.md  010_TASK_SYSTEM.md  011_PROJECT_SYSTEM.md  (+3 more)
(+69 files in other folders)
