[project]
name = "cognix-api"
version = "0.1.0"
description = "Cognix API — the backend service for the AI Organization Operating System."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
dependencies = [
    # Web framework
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    # Validation / settings
    "pydantic>=2.10.5",
    "pydantic-settings>=2.7.1",
    "email-validator>=2.2.0",
    # Database
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    # Cache / sessions
    "redis[hiredis]>=5.2.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[argon2]>=1.7.4",
    # HTTP utils
    "python-multipart>=0.0.20",
    # Rate limiting
    "slowapi>=0.1.9",
    # Utilities
    "python-slugify>=8.0.4",
]

[dependency-groups]
dev = [
    "ruff>=0.9.1",
    "mypy>=1.14.1",
    "httpx>=0.28.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "anyio>=4.7.0",
    "aiosqlite>=0.20.0",
    "types-passlib>=1.7.7",
    "types-python-jose>=3.3.4",
    "types-python-slugify>=8.0.2",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "TID", "RUF"]
ignore = ["B008"]  # FastAPI Depends() in function signatures

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[tool.pytest.ini_options]
addopts = "-q --tb=short"
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
